--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asttokens==2.4.1
+category-encoders==2.6.3
 comm==0.2.2
 contourpy==1.2.1
 cycler==0.12.1
@@ -20,6 +21,7 @@ numpy==2.0.1
 packaging==24.1
 pandas==2.2.2
 parso==0.8.4
+patsy==0.5.6
 pexpect==4.9.0
 pillow==10.4.0
 platformdirs==4.2.2
@@ -36,6 +38,7 @@ scikit-learn==1.5.1
 scipy==1.14.0
 six==1.16.0
 stack-data==0.6.3
+statsmodels==0.14.2
 threadpoolctl==3.5.0
 tornado==6.4.1
 traitlets==5.14.3
