--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asttokens==2.4.1
+catboost==1.2.5
 category-encoders==2.6.3
 comm==0.2.2
 contourpy==1.2.1
@@ -7,6 +8,7 @@ debugpy==1.8.2
 decorator==5.1.1
 executing==2.0.1
 fonttools==4.53.1
+graphviz==0.20.3
 ipykernel==6.29.5
 ipython==8.26.0
 jedi==0.19.1
@@ -14,10 +16,12 @@ joblib==1.4.2
 jupyter_client==8.6.2
 jupyter_core==5.7.2
 kiwisolver==1.4.5
+lightgbm==4.5.0
 matplotlib==3.9.1
 matplotlib-inline==0.1.7
 nest-asyncio==1.6.0
 numpy==2.0.1
+nvidia-nccl-cu12==2.22.3
 packaging==24.1
 pandas==2.2.2
 parso==0.8.4
@@ -25,6 +29,7 @@ patsy==0.5.6
 pexpect==4.9.0
 pillow==10.4.0
 platformdirs==4.2.2
+plotly==5.23.0
 prompt_toolkit==3.0.47
 psutil==6.0.0
 ptyprocess==0.7.0
@@ -39,8 +44,10 @@ scipy==1.14.0
 six==1.16.0
 stack-data==0.6.3
 statsmodels==0.14.2
+tenacity==9.0.0
 threadpoolctl==3.5.0
 tornado==6.4.1
 traitlets==5.14.3
 tzdata==2024.1
 wcwidth==0.2.13
+xgboost==2.1.1
